fix bug 93343 so we can display UTF-16 and UTF-32. r=harishd sr=vidur.